@@ -7,6 +7,8 @@ v8.0.2:
  - added slf4j-jdk14 dependency for logging in sqlite-jdbc
    (uses the slf4j-nop provider otherwise, which silently discards all logging)
  ExerciseViewer changes:
+ - Bugfix for drag & drop of activity files to the Calendar View
+   (timeout issue when completing the drag event)
 
 v8.0.1:
  Project changes:
